tests/snapshots/compile_file_o_all__bool.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/bool.bend
---
@Not = ((@fals (@true a)) a)

@fals = (* (a a))

@main = a
  & @Not ~ (@true a)

@true = (a (* a))
