tests/snapshots/compile_file_o_all__cyclic_dup.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/cyclic_dup.bend
---
[4m[1m[31mErrors:[0m
[1mIn compiled inet '[4mmain[0m[1m':[0m
  Found term that compiles into an inet with a vicious cycle
