tests/snapshots/compile_file_o_all__double_main.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/double_main.hvm
---
File has both 'Main' and 'main' definitions
