tests/snapshots/compile_file_o_all__eta_chain.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/eta_chain.bend
---
@Bar = a
  & @Baz ~ a

@Baz = ($([+] $(b c)) ($([+] $(a b)) (a c)))

@Foo = a
  & @Bar ~ a

@main = a
  & @Foo ~ a
