tests/snapshots/compile_file_o_all__eta_chain.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/eta_chain.hvm
---
@Bar = a
  & @Baz ~ a

@Baz = (a (b (c e)))
  & $(a $(d e)) ~ #0
  & $(b $(c d)) ~ #0

@Foo = a
  & @Bar ~ a

@main = a
  & @Foo ~ a
