tests/snapshots/compile_file_o_all__ex0.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/ex0.hvm
---
@C_2 = ({3 (a b) (c a)} (c b))
@S = (a ((a b) (* b)))
@main = a
& @C_2 ~ (@S ((* (b b)) a))

