tests/snapshots/compile_file_o_all__ex2.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/ex2.bend
---
@E = (* (* (a a)))

@I = (a (* ((a b) (* b))))

@O = (a ((a b) (* (* b))))

@c2 = ({(b c) (a b)} (a c))

@dec = ((@decO (@decI (@E a))) a)

@decI = a
  & @low ~ a

@decO = (a c)
  & @I ~ (b c)
  & @dec ~ (a b)

@low = ((@lowO (@lowI (@E a))) a)

@lowI = (a c)
  & @O ~ (b c)
  & @I ~ (a b)

@lowO = (a c)
  & @O ~ (b c)
  & @O ~ (a b)

@main = b
  & @run ~ (a b)
  & @c2 ~ (@I (@E a))

@run = ((@runO (@runI (@E a))) a)

@runI = (a d)
  & @run ~ (c d)
  & @dec ~ (b c)
  & @I ~ (a b)

@runO = (a d)
  & @run ~ (c d)
  & @dec ~ (b c)
  & @O ~ (a b)
