tests/snapshots/compile_file_o_all__ex2.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/ex2.hvm
---
@E = (* @J)
@I = (a (* ((a b) (* b))))
@J = (* (a a))
@c2 = ({0 (a b) (c a)} (c b))
@decO = ((@decO (@low (@E a))) (* ((a b) (* b))))
@low = ((@lowO (@lowI (@E a))) a)
@lowI = (a (((* ((a b) (* b))) c) (* (* c))))
@lowO = (a ((((a b) (* (* b))) c) (* (* c))))
@main = a
& @run ~ (b a)
& @c2 ~ (@I (@E b))
@run = ((@runO (@runI (@E a))) a)
@runI = ((@lowO (@lowI (@E (@runO (@runI (@E a)))))) a)
@runO = ((@decO (@low (@E (@lowO (@lowI (@E (@runO (@runI (@E a))))))))) a)

